
Version 0.3n
------------
* The usual typos and bugfixes.
* Lei can now give you some advice on how to handle Krawitz.
* Fixed a bug with lactation.
* Added scenes for bunnies:
 - Win: Get fucked by males.
 - Win: Fuck males (dominant).
* Added partial repeat date scenes for Miranda (mostly talk atm).
* Naga mob (no content yet) + Naga transformative item.

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.3m
------------
* The usual array of corrections to grammatical missteps and parser flailing.
* Misc opening times in Rigard shops fixed.
* Added a combat turn order listing, replacing the rather vague initiative listing.
* Changed the color of the sleep/wait/explore buttons to make it more clear when they are available.
* Changed color of level up button to green.
* Changed the approach gates sequence to make finding Lei more intuitive (thanks Del!). Lei's sequence has also been modified. Might result in some weirdness since I poked around at the flags.
* Added a new scene to Magnus, if you went and learned magic from Jeanne (a pretty short thing, but things make more sense now).
* Added TFs to Terry. This doesn't quite work the same way as usual TFs, but look around and I'm sure you'll figure out how to do it.
 - This includes some temporary and partially implemented items. Some of these can currently ONLY be gotten through cheating (debug in the tent).
* Added a "check cum amount" to Terry (in his pet section). You have to become a bit intimate with him before unlocking it.
* Introduced a quest tracking mechanism, and coded a few of the main quest bits.

Version 0.3l
------------
* Misc bug fixes and typos.
* Corrected a colossal cavalcade of crappy code (more typos and parser tags).
* Added shortcut keys for exploration buttons (right side): 6-0
* Gwendy no longer joins you at 100% lust.