@@ -15,6 +15,7 @@ Version 0.3n
  - Win: Fuck males (dominant).
 * Added partial repeat date scenes for Miranda (mostly talk atm).
 * Naga mob (no content yet) + Naga transformative item.
+* Added Naga TF item to Rosalin's menu.
 
 --------------------------------------------
              PREVIOUS VERSIONS
